# mcp-terminal

./: .gitignore  CLAUDE.md  FASTAPI_MCP_INTEGRATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  pyproject.toml  terminal_test_examples.md
api/: main.py
api/endpoints/: terminal.py
core/terminal/: buffer.py  manager.py  session.py
src/mcp_terminal/: __init__.py  __main__.py  server.py
src/mcp_terminal/api/: __init__.py  dependencies.py  endpoints.py  lifespan.py
src/mcp_terminal/core/: __init__.py
src/mcp_terminal/core/terminal/: __init__.py  buffer.py  manager.py  session.py
src/mcp_terminal/models/: __init__.py  terminal.py
